multi-repo support, server launcher, auto-bootstrap skill
Multi-repo:
 - Single Jigyasa instance with namespaced collections per repo
   (e.g., opensearch_symbols, jigyasa_chunks)
 - Repo registry (~/.jigyasa-mcp/repos.json) with CWD auto-detection
 - Branch switch tracking + auto-fallback to full reindex when last
   indexed commit no longer exists (gc/force-push)

 Server launcher (jigyasa_launcher.py + jigyasa-server CLI):
 - Fixed data directory at ~/.jigyasa-mcp/data/ (IndexData + TransLog)
 - Sets INDEX_CACHE_DIR, TRANSLOG_DIRECTORY, GRPC_SERVER_PORT env vars
 - PID tracking, --status, --stop lifecycle management
 - Auto-clone from github.com/lokeshmavale/jigyasa + auto-build JAR
   when not found locally
 - --auto-start flag on MCP server to start Jigyasa transparently

 Setup skill (.github/copilot-skills/jigyasa-setup.md):
 - Self-bootstrapping: auto-clones Jigyasa, auto-builds JAR,
   auto-generates gRPC stubs, auto-installs package
 - Asks user only 2 questions: which repo + embeddings yes/no
 - 9-step guide: preflight → install → server → self-test → index
   → register → git hooks → MCP config → verify
 - Troubleshooting table for common failures